get user and list user is ok
